--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -19,6 +19,7 @@
 %\usepackage{frcursive} %fournit l'environnement cursive, qui imite une écriture manuelle
 \usepackage{relsize}
 \usepackage{lettrine}
+\usepackage{mathabx} %% Pour avoir proprement le grand symbole \sqrt notamment
 \usepackage{subfig}%% \subfloat
 \usepackage{xspace}
 \usepackage{lipsum}
@@ -128,4 +129,9 @@
 %\subfile{chap1}
 \subfile{chap_optim_grey}
 \subfile{chap_analyse_heterogeneite}
+
+%%%% Bibliographie
+%\nocite{*}
+%\bibliographystyle{plain}
+%\bibliography{biblio}
 \end{document}
